2009-06-18 Patrick Galbraith <patg@patg.net> (4.012)

* Patch to bind_type_guessing from Craigslist, 
  Thanks to Chris! Happiness is no quoted numbers. 
  Fixed ChopBlanks to work with bind_type_guessing
* Patch for win32 strawberry build 
  Thanks to Curtis Jewell! Windows needs love
* Patch for auto-reconnect to set active flag
  Thanks to Doug Fischer!
* Fixed bug 32464 http://bugs.mysql.com/bug.php?id=32464.
  See https://rt.cpan.org/Ticket/Display.html?id=46308
  Add connection flag mysql_no_autocommit_cmd which users of
  MySQL Proxy can use to prevent 'set autocommit=#' from being
  issued by the driver. 'perldoc DBD::mysql' to see how to use
  this new flag
* Added bind-type-guessing options to Makefile.PL so the entire 
  test suite can be run with bind_type_guessing set.

2009-04-13 Patrick Galbraith <patg@patg.net> (4.011)
* Renamed unsafe_bind_type_guessing, fixed some of the logic. This
can be used to deal with bug 43822 
(https://rt.cpan.org/Ticket/Display.html?id=43822)
* Patch from Daniel Frett (daniel Dot frett At ccci Dot org) to fix 
issue of binding sever side integer parameters (server-side prepare
statements) resulting in corrupt data, bug 42723 
(https://rt.cpan.org/Ticket/Display.html?id=42723)
* Updated documentation, cruft cleanup (as always)

2008-10-24 Patrick Galbraith <patg@patg.net> (4.010)
* Fix to dbd_bind_ph() for uninitialized value 'buffer_length'
thanks for bug report and patch from Askniel.com (thanks!)

2008-10-21 Patrick Galbraith <patg@patg.net> (4.009)
* Fix to re-enable TAKE_IMP_DATA_VERSION. Still have to ensure DBI version 1.607 or higher
* Fix to escaped single quotes throwing off bind param detection. Patch from Zhurs (zhurs@yandex.ru) Spasibo!

2008-8-15 Patrick Galbraith <patg@patg.net> (4.008)
* Multi statement patch, thanks to Chris Heath!
* Disabled TAKE_IMP_DATA_VERSION because segfault with DBI < 1.607
* #29528: bind_param(..., SQL_FLOAT) ignores exponents - fixed, Thanks to
Tokuhiro Matsuno!