@@ -119,5 +119,5 @@ The driver is maintained by a mailing list:
 
   perl@lists.mysql.com
 
-You can also get help from the maintainer, Patrick Galbraith patg@grazr.com,
+You can also get help from the maintainer, Patrick Galbraith patg@patg.net
 
